--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,14 +6,15 @@
   border-radius: 10px;
   background: #e6fa2e;
   /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #ffea00 8%, #e6fa2e 83%);
+  background: -moz-linear-gradient(-45deg, #e6ff04 8%, #e6fa2e 83%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg, #ffea00 8%, #e6fa2e 83%);
+  background: -webkit-linear-gradient(-45deg, #e6ff04 8%, #e6fa2e 83%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg, #ffea00 8%, #e6fa2e 83%);
+  background: linear-gradient(135deg, #e6ff04 8%, #e6fa2e 83%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#fa782e', endColorstr='#c82930', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
   
 }
 
@@ -148,7 +149,7 @@
 
 .product-title {
   display: block;
-  font-size: 17px;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -174,7 +175,7 @@
 .product-caption {
   display: block;
   padding: 3px 0;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
 }
