--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#fa782e', endColorstr='#c82930', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
   
 }
 
